# IoT-Master-Thesis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Decryption.sh  Makefile  README.md  application.c  application.h  cmake_install.cmake  prov_dev_client  prov_dev_client.c  prov_dev_client_1.c  prov_dev_client_backup.c
Documentation/: OTA_architecture.drawio
Documentation/MT_Prithvi/: MT_Prithvi.aux  MT_Prithvi.blg  MT_Prithvi.dvi  MT_Prithvi.glsdefs  MT_Prithvi.ist  MT_Prithvi.lof  MT_Prithvi.out  MT_Prithvi.ps  MT_Prithvi.tex  MT_Prithvi.toc
test_encryption/: encrypt.sh
